[IE11] fix text wrapping issue on Degree Programs and Residencies on Department homepage

--- a/src/assets/scss/department/_department.residencies.scss
+++ b/src/assets/scss/department/_department.residencies.scss
@@ -150,22 +150,20 @@
 				transition: all 220ms linear 0ms;
 
 				@include bpoint(tablet) {
+
 					width: calc(50% - 2rem);
+
 				}
 
 				@include bpoint(desktop) {
+
 					width: calc((100% / 3) - 2rem);
+
 				}
 
 				@include bpoint(widescreen) {
+
 					width: calc(25% - 2rem);
-				}
-
-				&__parent {
-
-					@include font( $klavislim, 0.875rem, 400 );
-
-					@include color( white, 0.000 );
 
 				}
 
@@ -175,6 +173,12 @@
 				&:active {
 
 					@include color( white, 0.000 );
+
+				}
+
+				&__title {
+
+					max-width: 100%;
 
 				}
 
